# Auto-Antenna-Builder

./: CMakeLists.txt  README.md  autoantenna.cpp
Data/: Airports.txt  atc.txt
Output/: KG.csv  example.csv
Source/: autoantenna.cpp  classes.h  export_data.h  functions.h  import_data.h  initialization.h
Source/modules/: classes.cpp  export_data.cpp  functions.cpp  import_data.cpp  initialization.cpp
